System Tray: Network: Fix DCHECKs

This actually fixes two separate dchecks introduced by recent changes:
1. Clicking the network settings menu in login now shows the details
   page for the default network, so |network_id| can be empty.
2. Clicking the network settings menu now special cases for Arc VPNs;
   that test needs to avoid calling NSH::GetNetworkStateFromGuid
   if |network_id| is empty since it calls DCHECK(guid).

Bug: 773366
Change-Id: Iaeb1dbd4479dcefd5ba85eccbe5219a4efebb0e8
Reviewed-on: https://chromium-review.googlesource.com/711318
Reviewed-by: Kevin Cernekee <cernekee@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508050}
Former-commit-id: 6ce711f3c66a4f10f5fa4985661fa061ca49fa88